2020-02-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros geda_get_default_widget..

    * src/widgets/geda_font_dialog.c: Revise list_row_activated; remove
      unneeded cast, reverse logic of first conditional and eliminate
      setting window to NULL.

2020-02-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_font_dialog.c: Reduce the scope of GtkRequisition in
      geda_font_dialog_update_preview and utilize geda_get_widget_requisition
      macro.

2020-01-31 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Only define GtkObject as GtkWidget if Gtk > 2.

    * src/functions/geda_widget.c: Add function geda_widget_get_allocated_width.

    * src/widgets/geda_bulb.c: Revise functions geda_bulb_draw_indicator and
      button_get_props to use type unsigned int.

    * src/widgets/geda_combobox.c: Replace gtk_widget_get_allocated_width with
      geda_widget_get_allocated_width in geda_combo_box_real_popup. Add
      ancillary pointer to cell_view in geda_combo_box_menu_row_inserted and
      utilize geda_get_child_widget macro.

2020-01-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Add geda_combo_box_set_background_color
      and call from geda_combo_box_state_changed and reduce geda_combo_box_
      set_background_color. Replace dynamic cast with static class cast in
      geda_combo_box_destroy. Revise geda_combo_box_list_auto_scroll to
      utilize macros:

          * geda_get_adjustment_upper
          * geda_get_adjustment_lower
          * geda_get_adjustment_page_size

2020-01-29 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Remove cast to void pointer from
      geda_get_widget_style macro.

    * include/geda_toggle_action.h: Remove const qualifier from action_name.

    * src/widgets/geda_combobox.c: Revise geda_combo_box_size_request; change
      int specifier to unsigned for focus_width, focus_pad, font_size and